--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,3 +1,4 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<h1>This is a login page</h1>
+<h1>This is a sample web page </h1>
+</html>
