Fixed parse error

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,10 +19,10 @@
 				}
 	  	</style>
         <script src="../js/oauth_util.js"></script>
-	</head>    
-    <body style=min-width:20em>
+	</head>
+    <h1>OAuth Login Page</h1>
+    <body>
   		<div id="send-button-div"></div>
         <div id="links-content-div"></div>
   	</body>
-<h1>OAuth Login Page</h1>
 </html>
