Fix for js resources

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 					margin: 10px;
 				}
 	  	</style>
-        <script src="/resources/oauth_util.js"></script>
+        <script src="resources/oauth_util.js"></script>
 	</head>
     <h1>OAuth Login Page</h1>
     <body>
