Testing server based oauth integration

--- a/src/main/resources/templates/server-login.html
+++ b/src/main/resources/templates/server-login.html
@@ -20,8 +20,8 @@
 	  	</style>
         <script src="resources/server_login.js"></script>
 	</head>
-    <h1>Server Login Page</h1>
+  <h1>Server Login Page</h1>
     <body>
-  		<div id="login-button-div"></div>
+        <a id="login-link" href="/redirect">Login</a>
   	</body>
 </html>
