Testing local storage

--- a/src/main/resources/templates/server-login.html
+++ b/src/main/resources/templates/server-login.html
@@ -23,5 +23,6 @@
   <h1>Server Login Page</h1>
     <body>
         <a id="login-link" href="/redirect">Login</a>
+        <button id = "logout-btn">Logout</button>
   	</body>
 </html>
