--- a/one-click-share-chrome-ext-published/popup.css
+++ b/one-click-share-chrome-ext-published/popup.css
@@ -37,11 +37,21 @@ label.aligned {
 .in-sender-div {
     font-size: 0.8em;
 }
-.in-links-text-class {
+.links-class {
     text-decoration: none;
 }
-.in-links-text-class:hover {
+.links-class:hover {
     text-decoration: underline;
+    cursor: pointer;
+}
+.links-unread-class {
+    text-decoration: none;
+    font-weight: bold;
+}
+.links-unread-class:hover {
+    text-decoration: underline;
+    font-weight: bold;
+    cursor: pointer;
 }
 a:-webkit-any-link {
     color: -webkit-link;
