Fixing wrong url for affliate page

--- a/src/main/resources/templates/amazon-india.html
+++ b/src/main/resources/templates/amazon-india.html
@@ -13,7 +13,7 @@
 <div id="static-content">
     <p>
         <h4>Why am i seeing this page?</h4>
-        <a>We use the amazon affiliate program to make the chrome extension self funded. This helps us in scaling up the resources and building better features.</a>
+        <p>We use the amazon affiliate program to make the chrome extension self funded. This helps us in scaling up the resources and building better features.</p>
     </p>
 </div>
 
