Adding trending & suggested links
+1.Adding trending & suggested links

+2.Adding trending & suggested links

+3.Adding trending & suggested links

+4.Adding trending & suggested links

+5.Adding trending & suggested links

+6.Adding trending & suggested links

+7.Adding trending & suggested links

+8.Adding trending & suggested links

--- a/src/main/resources/templates/amazon-india.html
+++ b/src/main/resources/templates/amazon-india.html
@@ -5,16 +5,39 @@
     <script src="../../webapp/resources/amazon-india.js"></script>
     <script src="resources/amazon-india.js"></script>
 
+    <style type="text/css">
+        p {
+            margin: 0;
+            padding-bottom: 0.2em;
+        }
+        .links-div {
+            padding: 2px;
+        }
+    </style>
+
 </head>
 <h3>Amazon Affiliate Page</h3>
 
-<div id="main-link">
-</div>
 <div id="static-content">
-    <p>
-        <h4>Why am i seeing this page?</h4>
-        <p>We use the amazon affiliate program to make the chrome extension self funded. This helps us in scaling up the resources and building better features.</p>
+    <p><b>Why am i seeing this page?</b>
     </p>
+    <p>We use the amazon affiliate program to make the chrome extension self funded. This helps us in scaling up the resources and building better features. Click on the below link to proceed.</p>
 </div>
+
+<p>&nbsp;</p>
+
+<div id="main-link-div">
+</div>
+
+<div id="rec-link-div">
+    <h4>Author Recommended Links:</h4>
+</div>
+
+
+<div id="trend-link-div">
+    <h4>Trending Links:</h4>
+</div>
+
+
 
 </html>
