Adding amazon affliate impressions support
1+Adding amazon affliate impressions support

Added flipkart afflaite support and refactored code

+1Added flipkart afflaite support and refactored code

+2Added flipkart afflaite support and refactored code

+3Added flipkart afflaite support and refactored code

+4Added flipkart afflaite support and refactored code

+5.Added flipkart afflaite support and refactored code

+6.Added flipkart afflaite support and refactored code

--- a/src/main/resources/templates/flipkart.html
+++ b/src/main/resources/templates/flipkart.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script src="resources/amazon-india.js"></script>
+    <script src="resources/flipkart.js"></script>
     <script src="resources/base.js"></script>
     <style type="text/css">
         p {
