[UI] Adding Delete Functionality in UI
Adding Delete Functionality in UI

--- a/one-click-share-chrome-ext-test/popup.css
+++ b/one-click-share-chrome-ext-test/popup.css
@@ -55,3 +55,11 @@ label.aligned {
     font-weight: bold;
     cursor: pointer;
 }
+.del-button-class{
+    float:right;
+    width: 18px;
+    height: 20px;
+    padding:0px;
+    align-content: center;
+    align-items: center;
+}
