[UI] modifying the main affiliate  pages

--- a/src/main/resources/templates/amazon-india.html
+++ b/src/main/resources/templates/amazon-india.html
@@ -15,12 +15,10 @@
     </style>
 
 </head>
-<h3>Affiliate Page</h3>
 
 <div id="static-content">
-    <p><b>Why am i seeing this page?</b>
+    <p>This page is provided by the <a href="https://chrome.google.com/webstore/detail/1-click-share-link/ahphcmppigmmngfoehcncdfpafapijmj">chrome extension</a>.
     </p>
-    <p>We use the affiliate program to make the chrome extension self funded. This helps us in scaling up the resources and building better features. Click on the below link to proceed.</p>
 </div>
 
 <p>&nbsp;</p>
@@ -37,11 +35,5 @@
     <h4>Trending Links:</h4>
 </div>
 
-<!--<body>
-    <script type="text/javascript" src="http://ir-in.amazon-adsystem.com/s/impression-counter?tag=1clishalin-21&o=31"></script>
-    <noscript>
-        <img src="http://ir-in.amazon-adsystem.com/s/noscript?tag=1clishalin-21" alt="" />
-    </noscript>
-</body>-->
 
 </html>
